# WatcheRobot

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  NOTICE.md  README.md  README_zh.md  SECURITY.md
firmware/esp32-s3/components/hal/hal_display/: CMakeLists.txt  Kconfig  idf_component.yml
firmware/esp32-s3/components/protocols/mcu_link/: CMakeLists.txt  Kconfig  idf_component.yml
firmware/esp32-s3/components/protocols/ws_client/: CMakeLists.txt  Kconfig  idf_component.yml
firmware/esp32-s3/components/sdk/watcher_sdk/: CMakeLists.txt
firmware/esp32-s3/components/sensecap-watcher/: CMakeLists.txt  Kconfig  idf_component.yml  sensecap-watcher.c
firmware/esp32-s3/components/sensecap-watcher/include/: sensecap-watcher.h
firmware/esp32-s3/components/services/anim_service/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  animation_registry.json  idf_component.yml
firmware/esp32-s3/components/services/behavior_state_service/: CMakeLists.txt
firmware/esp32-s3/components/services/voice_service/: CMakeLists.txt  Kconfig  idf_component.yml
firmware/esp32-s3/main/: CMakeLists.txt  Kconfig.projbuild  agent_animation_flow_core.c  agent_animation_flow_core.h  agent_runtime.c  agent_runtime.h  app_center.c  app_center.h  app_center_disabled.c  app_center_exit_policy.c  app_center_exit_policy.h  app_center_firmware_sources.c  app_center_firmware_sources.h  app_center_manager.c  app_center_manager.h  app_main.c  app_ui_mode_core.c  app_ui_mode_core.h  button_shutdown_feedback.c  button_shutdown_feedback.h  button_shutdown_hold_detector.c  button_shutdown_hold_detector.h  button_shutdown_low_power.c  button_shutdown_low_power.h  button_shutdown_power_channel.c  button_shutdown_power_channel.h  button_shutdown_sequence.c  button_shutdown_sequence.h  button_shutdown_soft_off.c  button_shutdown_soft_off.h  client_app.c  client_app.h  debug_cli.c  debug_cli.h  debug_touch_guard.c  debug_touch_guard.h  factory_settings_factory_events.c  factory_settings_perf_stats.c  factory_settings_perf_stats.h  factory_settings_scroll_curve.c  (+21 more)
firmware/esp32-s3/main/factory_home_ui/: ui.h
firmware/esp32-s3/main/factory_home_ui/fonts/: ui_font_Font12.c  ui_font_font_bold.c  ui_font_semibold28.c  ui_font_semibold42.c  watcher_font_wifi_cjk16.c
firmware/esp32-s3/main/factory_home_ui/images/: ui_img_1158392298.c  ui_img_1415499115.c  ui_img_1722191473.c  ui_img_agent_robot_focused_png.c  ui_img_agent_robot_png.c  ui_img_arrow_png.c  ui_img_battery_charging_png.c  ui_img_battery_frame_png.c  ui_img_battery_warn_png.c  ui_img_ble_png.c  ui_img_brighticon_png.c  ui_img_button_cancel_png.c  ui_img_currenttask_png.c  ui_img_extension_png.c  ui_img_no_wifi_png.c  ui_img_page_main_png.c  ui_img_phone_control_focused_png.c  ui_img_phone_control_png.c  ui_img_python_sdk_focused_png.c  ui_img_python_sdk_png.c  ui_img_setback_png.c  ui_img_setting_f_png.c  ui_img_setting_png.c  ui_img_swipe_png.c  ui_img_task_template_png.c  ui_img_volicon_png.c  ui_img_wifi_3_png.c
firmware/esp32-s3/main/factory_settings_original_ui/: ui.h  ui_events.h
firmware/esp32-s3/main/factory_settings_original_ui/screens/: ui_Page_About.c  ui_Page_Connect.c  ui_Page_Network.c  ui_Page_Set.c  ui_Page_Sleep.c  ui_Page_Slider.c  ui_Page_Swipe.c
firmware/esp32-s3/main/test_support/host/: CMakeLists.txt
firmware/stm32-f103/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  startup_stm32f103xb.s  watcheRobot_STM32.ioc
firmware/stm32-f103/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
firmware/stm32-f103/Core/Src/: adc.c  dma.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
firmware/stm32-f103/Documents/: 2026-04-14-数字孪生场景下舵机运动控制问题.md  2026-04-18-舵机串口控角与反馈待测记录.md  2026-04-30-DP-IRP8307底部拿起检测设计说明.md  ESP32_TOUCH_EVENT_HANDOFF.md  P1工程与串口bring-up说明.md  STM32_Latest_Test_Checklist.md  STM32_v2文档入口.md  上游协议基线.md  分支规划.md  开发任务拆解.md  项目结构说明.md
firmware/stm32-f103/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_cortex.h  stm32f1xx_hal_dma.h  stm32f1xx_hal_dma_ex.h  stm32f1xx_hal_flash.h  stm32f1xx_hal_flash_ex.h  stm32f1xx_hal_rcc.h  stm32f1xx_hal_rcc_ex.h  stm32f1xx_ll_bus.h  stm32f1xx_ll_cortex.h  stm32f1xx_ll_dma.h  stm32f1xx_ll_gpio.h  stm32f1xx_ll_i2c.h  stm32f1xx_ll_rcc.h  stm32f1xx_ll_system.h  stm32f1xx_ll_usart.h
firmware/stm32-f103/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.c  stm32f1xx_hal_cortex.c  stm32f1xx_hal_dma.c  stm32f1xx_hal_exti.c  stm32f1xx_hal_flash.c  stm32f1xx_hal_flash_ex.c  stm32f1xx_hal_gpio.c  stm32f1xx_hal_i2c.c  stm32f1xx_hal_rcc.c  stm32f1xx_hal_rcc_ex.c  stm32f1xx_hal_uart.c
firmware/stm32-f103/Tools/: generate_build_info.py
firmware/stm32-f103/Tools/servo-motion-console/: README.md  index.html  package-lock.json  package.json
firmware/stm32-f103/Tools/servo-motion-console/src/: feedbackChart.js  main.js  motionMath.js  serialProtocol.js  servoStatusView.js  styles.css
firmware/stm32-f103/Tools/servo-motion-console/tests/: feedback-chart.test.mjs  protocol.test.mjs  servo-status-view.test.mjs
firmware/stm32-f103/User/App/: app.c  app.h  cli.c  cli.h
firmware/stm32-f103/User/Board/: board_pins.h
firmware/stm32-f103/User/Config/: app_config.h
firmware/stm32-f103/User/Device/bmi160/: README.md  bmi160.c  bmi160.h
firmware/stm32-f103/User/Device/bmm150/: README.md  bmm150.c  bmm150.h
firmware/stm32-f103/User/Protocol/: coproc_cobs.c  coproc_cobs.h  coproc_crc16.c  coproc_crc16.h  coproc_dispatch.c  coproc_dispatch.h  coproc_frame_codec.c  coproc_frame_codec.h  coproc_framing.c  coproc_framing.h  coproc_protocol.c  coproc_protocol.h  coproc_protocol_types.c  coproc_protocol_types.h  coproc_ring_buffer.c  coproc_ring_buffer.h  coproc_runtime.c  coproc_runtime.h  coproc_stress_sim.c  coproc_stress_sim.h  coproc_tx_builder.c  coproc_tx_builder.h
firmware/stm32-f103/User/TestHost/: README.md  cli_host_test.c  servo_motion_test.c  test_main.c
firmware/stm32-f103/cmake/: gcc-arm-none-eabi.cmake
firmware/stm32-f103/cmake/stm32cubemx/: CMakeLists.txt
(+617 files in other folders)
